# Lumina-AI-OS

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  Dockerfile  Makefile  README.md  USER_MANUAL.md  check_keys.py  crm_data.json  docker-compose.prod.yml  docker-compose.yml  email_plugin_data.json  jarvis_settings.json  leads_plugin_data.json  lumina-mcp.json  lumina_auth.json  lumina_long_term.json  lumina_memory.json  lumina_semantic.json  main.py  marketing_plugin_data.json  nginx.conf  pyproject.toml  reporting_plugin_data.json  requirements.txt  run_jarvis.py  run_voice.py  seo_data.json  start-mcp.sh  start-vscode.sh  test_lumina.py  whatsapp_plugin_data.json
.github/workflows/: ci.yml  deploy.yml
api/: agents.py  analytics_router.py  android.py  assistant.py  audit_api.py  auth.py  automation.py  browser.py  chat.py  code.py  coding_agent.py  community_skills.py  connectors.py  core_api.py  crm.py  desktop.py  email.py  employee.py  learning.py  marketing.py  marketplace.py  multiagent.py  pipeline.py  presets.py  projects.py  queue.py  seo.py  skills.py  social.py  system.py  tasks.py  test_browser.py  tester.py  vault.py  vision.py  visual_flows.py  voice.py  whatsapp.py  writer.py
api/middleware/: auth.py  ratelimit.py
backend/: main.py
backend/tests/: test_api.py
cli/: lumina.py
config/: settings.py
core/: __init__.py  connectors.py  core_ai.py  log.py  orchestrator.py  provider.py  self_heal.py  self_heal_engine.py
core/agents/: __init__.py  approval.py  base.py  ceo.py  content.py  employee.py  languages.py  learning.py  manager.py  routine.py  runner.py  specialized.py
core/analytics/: __init__.py
core/android/: __init__.py  client.py  device.py  keyboard.py  notifications.py  (+2 more)
desktop/: main.js  package.json
docs/: API_ARCHITECTURE.md  ARCHITECTURE.md  BLUEPRINT.md  DATABASE.md  PLUGIN_ARCHITECTURE.md  PRODUCT_CONSTITUTION.md  SECURITY_ARCHITECTURE.md  SPRINTS.md  SRS.md  UI_UX_DESIGN_SYSTEM.md
examples/: basic_usage.py  plugin_example.py  security_example.py
frontend/: index.html  package.json
hello-lumina/: README.md  test.py
jarvis/: __init__.py  hotkey.py  jarvis_settings.py  llm_router.py  notifications.py  overlay.py  rag.py  voice.py
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  postgres-deployment.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml
kernel/: __init__.py  exceptions.py  log.py
lumina-ui/: .oxlintrc.json  index.html  package-lock.json  package.json  vite.config.ts
lumina-vscode/: README.md  lumina-vscode-0.1.0.vsix  package.json
lumina_app/: pubspec.yaml
mcp_server/: server.py
mobile/: pubspec.yaml
scripts/: demo.sh  seed.py
vscode-extension/: package.json
(+451 files in other folders)
