[project]
name = "lumina"
version = "1.0.0"
description = "Modular AI Operating Platform"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["kernel/tests"]

[tool.coverage.run]
source = ["kernel"]
