[project]
name = "lumina"
version = "1.0.0"
description = "The World's First Autonomous AI Employee Operating System"
readme = "USER_MANUAL.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Lumina AI", email = "dev@lumina.ai"},
]
keywords = ["ai", "automation", "browser", "crm", "seo", "whatsapp", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
lumina = "cli.lumina:main"

[project.urls]
Homepage = "https://lumina.ai"
Documentation = "https://docs.lumina.ai"
Source = "https://github.com/lumina-ai/lumina"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM", "PERF", "PLC"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["kernel/tests"]

[tool.coverage.run]
source = ["kernel", "core", "api"]
